--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-session": "^1.18.1",
+    "method-override": "^3.0.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0"
   }
